--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     
     <body>
       <center>
-      <h1 style="font-size:50px;"> Cables and Connectors</h1>
+      <h1 style="font-size:60px; font-family:calibri;"> Cables and Connectors</h1>
       </center>
       
       <p style="font-size:30px;"> Home Page </p>
