--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
       
       <p style="color:red; font-size:20px;"> -Links to other pages: </p>
       <p style="font-size:18px;">
-          <a href="">Images</a>
+          <a href="Index2.html">Images</a>
       </p>
       <br>
       
