--- a/Index2.html
+++ b/Index2.html
@@ -20,43 +20,47 @@
 	  <img src="type_c.jpeg" alt="type c" style="width:300px;height:300px;">
 	  <br>
 	  <p> presa type c </p>
+	  <br>
 	  <img src="presa_scart.jpeg" alt="presa scart" style="width:300px;height:300px;">
 	  <br>
 	  <p> presa scart</p>
+	  <br>
 	  <img src="jack_solo_audio.jpeg" alt="jack solo audio" style="width:300px;height:300px;">
 	  <br>
 	  <p> jack solo audio</p>
+	  <br>
 	  <img src="jack_audio_mic.jpeg" alt="jack audio microfono" style="width:300px;height:300px;">
 	  <br>
 	  <p> jack audio microfono</p>
+	  <br>
 	  <img src="antenna.jpeg" alt="antenna" style="width:300px;height:300px;">
 	  <br>
 	  <p> antenna</p>
-	  
+	  <br>
 	  <img src="cavo_ethernet.jpeg" alt="cavo ethernet" style="width:300px;height:300px;">
 	  <br>
 	  <p> cavo ethernet</p>
-	  
+	  <br>
 	  <img src="dopino_tele.jpeg" alt="dopino telefonico" style="width:300px;height:300px;">
 	  <br>
 	  <p> dopino telefonico</p>
-	  
+	  <br>
 	  <img src="type_a.jpeg" alt="type a" style="width:300px;height:300px;">
 	  <br>
-	  <p> type a</p>
-	  
+	  <p> presa type a</p>
+	  <br>
 	  <img src="type_b.jpeg" alt="type b" style="width:300px;height:300px;">
 	  <br>
-	  <p> type b</p>
-	  
+	  <p> presa type b</p>
+	  <br>
 	  <img src="usb.jpeg" alt="usb" style="width:300px;height:300px;">
 	  <br>
-	  <p> usb</p>
-	  
+	  <p> USB (Universal Serial Bus) </p>
+	  <br>
 	  <img src="vga.jpeg" alt="vga" style="width:300px;height:300px;">
 	  <br>
-	  <p> vga</p>
-	    <br>
+	  <p> VGA (Video Graphics Array)</p>
+	  <br>
 	    
 	    <p style="font-size:18px;">
           <a href="Index.html">-Return to Home Pages</a>
