--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     
     </head>
     
-    <body>
+    <body style="background-color:Orange;">
       <center>
       <h1 style="font-size:60px; font-family:calibri;"> Cables and Connectors</h1>
       </center>
