--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
       <p style="font-size:30px;"> Home Page </p>
       <br>
       
-      <p style="color:red; font-size:20px;"> -Links to other pages: </p>
+      <p style="color:yellow; font-size:20px;"> -Links to other pages: </p>
       <p style="font-size:18px;">
           <a href="Index2.html">Images</a>
       </p>
