--- a/Index.html
+++ b/Index.html
@@ -14,15 +14,15 @@
       <p style="font-size:48px;"> Home Page </p>
       <br>
       
-      <p style="color:yellow; font-size:27px;"> -Links to other pages: </p>
+      <p style="color:yellow; font-size:27px;"> -Links alle altre pagine: </p>
       <p style="font-size:26px;">
-          <a href="Index2.html" style="color:black;">Images</a>
+          <a href="Index2.html" style="color:black;">Immmagini</a>
       </p>
       <br>
       
       <p>
       <right>
-          <i style="font-size:12px;"> Created by Conte, Geroldi and Granata from 3IB </i>
+          <i style="font-size:12px;"> Creato da Conte, Geroldi and Granata della classe 3IB </i>
       </right>
       </p>
     </body>
