--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
       
       <p style="color:yellow; font-size:27px;"> -Links alle altre pagine: </p>
       <p style="font-size:26px;">
-          <a href="Index2.html" style="color:black;">Immmagini</a>
+          <a href="Index2.html" style="color:black;">Immagini</a>
       </p>
       <br>
       
